src/tests/binary-operators/2.txt
binary-operators/2.c:2:9: error: invalid operands to comparison '==' (have 'char' and 'char *')
     'a' == "B";
         ^
